--- a/index.html
+++ b/index.html
@@ -1,10 +1,97 @@
 <!DOCTYPE html>
+<!--
+	Fractal by HTML5 UP	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <title>keyplus</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
   </head>
-  <body>
-    <img src="https://camo.githubusercontent.com/8ce9cfa67f78e4a52acbb52f8b6ea46dfb6d595c/68747470733a2f2f7261776769742e636f6d2f6168746e2f6b6579706c75732f6d61737465722f7265736f75726365732f6b6579706c75735f6c6f676f2e737667"/>
+  <body id="top">
+    <!-- Header -->
+    <header id="header">
+      <div class="content">
+        <h1><img src="images/keyplus_logo.svg"></h1>
+        <p><span class="col-11 text-gray-dark mr-2" itemprop="about">An easy to
+            use, wired and wireless modular keyboard firmware</span></p>
+        <ul class="actions">
+          <li><a href="https://github.com/ahtn/keyplus/releases" class="button special icon fa-download">Download
+              on GitHub</a></li>
+          <li><a href="#two" class="button icon fa-chevron-down scrolly">Learn
+              More</a></li>
+        </ul>
+      </div>
+      <!--<div class="image phone">
+        <div class="inner"><img src="images/screen.jpg" alt=""></div>      </div> -->
+    </header>
+    <!-- Two -->
+    <section id="two" class="wrapper">
+      <div class="inner alt">
+        <section class="spotlight">
+          <div class="image"><img src="images/easy.jpg" alt=""></div>
+          <div class="content">
+            <h3>Ease of use</h3>
+            <p>keyplus is easy to configure. The layout is stored in an
+              easy-to-read YAML file, and there is a simple GUI to program the
+              keyboard. </p>
+          </div>
+        </section>
+        <section class="spotlight">
+          <div class="image"><img src="images/wireless.jpg" alt=""></div>
+          <div class="content">
+            <h3>Wireless support</h3>
+            <p>keyplus was built with wireless in mind. It supports wireless
+              split and regular wireless. Just about every possible
+              configuration you can think of is compatible. keyplus uses a
+              Logitech Unifying receiver, so your mouse and keyboard can be
+              connected to the same dongle. </p>
+          </div>
+        </section>
+        <section class="spotlight">
+          <div class="image"><img src="images/mini.jpg" alt=""></div>
+          <div class="content">
+            <h3>keyplus mini</h3>
+            <p>The keyplus mini is the flagship keyplus-compatible device,
+              featuring row/column labeling, USB Type C, and a connection for a
+              battery. </p>
+          </div>
+        </section>
+      </div>
+    </section>
+    <!-- Three -->
+    <section id="three" class="wrapper style2 special">
+      <header class="major">
+        <h2>Get keyplus today. </h2>
+        <p>The keyplus GitHub page has all the information you need to get
+          started. If you have a keyplus mini, you can jump right in. Otherwise,
+          check out the <a href="https://github.com/ahtn/keyplus">supported
+            hardware list</a> to see if you have a compatible device. </p>
+      </header>
+      <ul class="actions">
+        <li><a href="https://github.com/ahtn/keyplus/releases" class="button special icon fa-download">Download</a></li>
+        <li><a href="https://github.com/ahtn/keyplus" class="button">GitHub</a></li>
+      </ul>
+    </section>
+    <!-- Four -->
+    <!--
+			<section id="four" class="wrapper">				<div class="inner">					<header class="major">						<h2>Elements</h2>					</header>					<section>						<h4>Text</h4>						<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.						This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.						This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>						<hr />						<header>							<h4>Heading with a Subtitle</h4>							<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>						</header>						<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>						<header>							<h5>Heading with a Subtitle</h5>							<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>						</header>						<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>						<hr />						<h2>Heading Level 2</h2>						<h3>Heading Level 3</h3>						<h4>Heading Level 4</h4>						<h5>Heading Level 5</h5>						<h6>Heading Level 6</h6>						<hr />						<h5>Blockquote</h5>						<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>						<h5>Preformatted</h5>						<pre><code>i = 0;while (!deck.isInOrder()) {  print 'Iteration ' + i;  deck.shuffle();  i++;}print 'It took ' + i + ' iterations to sort the deck.';</code></pre>					</section>					<section>						<h4>Lists</h4>						<div class="row">							<div class="6u 12u$(medium)">								<h5>Unordered</h5>								<ul>									<li>Dolor pulvinar etiam.</li>									<li>Sagittis adipiscing.</li>									<li>Felis enim feugiat.</li>								</ul>								<h5>Alternate</h5>								<ul class="alt">									<li>Dolor pulvinar etiam.</li>									<li>Sagittis adipiscing.</li>									<li>Felis enim feugiat.</li>								</ul>							</div>							<div class="6u$ 12u$(medium)">								<h5>Ordered</h5>								<ol>									<li>Dolor pulvinar etiam.</li>									<li>Etiam vel felis viverra.</li>									<li>Felis enim feugiat.</li>									<li>Dolor pulvinar etiam.</li>									<li>Etiam vel felis lorem.</li>									<li>Felis enim et feugiat.</li>								</ol>								<h5>Icons</h5>								<ul class="icons">									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>								</ul>							</div>						</div>						<h5>Actions</h5>						<div class="row">							<div class="6u 12u$(medium)">								<ul class="actions">									<li><a href="#" class="button special">Default</a></li>									<li><a href="#" class="button">Default</a></li>								</ul>								<ul class="actions small">									<li><a href="#" class="button special small">Small</a></li>									<li><a href="#" class="button small">Small</a></li>								</ul>								<ul class="actions vertical">									<li><a href="#" class="button special">Default</a></li>									<li><a href="#" class="button">Default</a></li>								</ul>								<ul class="actions vertical small">									<li><a href="#" class="button special small">Small</a></li>									<li><a href="#" class="button small">Small</a></li>								</ul>							</div>							<div class="6u 12u$(medium)">								<ul class="actions vertical">									<li><a href="#" class="button special fit">Default</a></li>									<li><a href="#" class="button fit">Default</a></li>								</ul>								<ul class="actions vertical small">									<li><a href="#" class="button special small fit">Small</a></li>									<li><a href="#" class="button small fit">Small</a></li>								</ul>							</div>						</div>					</section>					<section>						<h4>Table</h4>						<h5>Default</h5>						<div class="table-wrapper">							<table>								<thead>									<tr>										<th>Name</th>										<th>Description</th>										<th>Price</th>									</tr>								</thead>								<tbody>									<tr>										<td>Item One</td>										<td>Ante turpis integer aliquet porttitor.</td>										<td>29.99</td>									</tr>									<tr>										<td>Item Two</td>										<td>Vis ac commodo adipiscing arcu aliquet.</td>										<td>19.99</td>									</tr>									<tr>										<td>Item Three</td>										<td> Morbi faucibus arcu accumsan lorem.</td>										<td>29.99</td>									</tr>									<tr>										<td>Item Four</td>										<td>Vitae integer tempus condimentum.</td>										<td>19.99</td>									</tr>									<tr>										<td>Item Five</td>										<td>Ante turpis integer aliquet porttitor.</td>										<td>29.99</td>									</tr>								</tbody>								<tfoot>									<tr>										<td colspan="2"></td>										<td>100.00</td>									</tr>								</tfoot>							</table>						</div>						<h5>Alternate</h5>						<div class="table-wrapper">							<table class="alt">								<thead>									<tr>										<th>Name</th>										<th>Description</th>										<th>Price</th>									</tr>								</thead>								<tbody>									<tr>										<td>Item One</td>										<td>Ante turpis integer aliquet porttitor.</td>										<td>29.99</td>									</tr>									<tr>										<td>Item Two</td>										<td>Vis ac commodo adipiscing arcu aliquet.</td>										<td>19.99</td>									</tr>									<tr>										<td>Item Three</td>										<td> Morbi faucibus arcu accumsan lorem.</td>										<td>29.99</td>									</tr>									<tr>										<td>Item Four</td>										<td>Vitae integer tempus condimentum.</td>										<td>19.99</td>									</tr>									<tr>										<td>Item Five</td>										<td>Ante turpis integer aliquet porttitor.</td>										<td>29.99</td>									</tr>								</tbody>								<tfoot>									<tr>										<td colspan="2"></td>										<td>100.00</td>									</tr>								</tfoot>							</table>						</div>					</section>					<section>						<h4>Buttons</h4>						<ul class="actions">							<li><a href="#" class="button special">Special</a></li>							<li><a href="#" class="button">Default</a></li>						</ul>						<ul class="actions">							<li><a href="#" class="button big">Big</a></li>							<li><a href="#" class="button">Default</a></li>							<li><a href="#" class="button small">Small</a></li>						</ul>						<ul class="actions fit">							<li><a href="#" class="button fit">Fit</a></li>							<li><a href="#" class="button special fit">Fit</a></li>							<li><a href="#" class="button fit">Fit</a></li>						</ul>						<ul class="actions fit small">							<li><a href="#" class="button special fit small">Fit + Small</a></li>							<li><a href="#" class="button fit small">Fit + Small</a></li>							<li><a href="#" class="button special fit small">Fit + Small</a></li>						</ul>						<ul class="actions">							<li><a href="#" class="button special icon fa-download">Icon</a></li>							<li><a href="#" class="button icon fa-download">Icon</a></li>						</ul>						<ul class="actions">							<li><span class="button special disabled">Disabled</span></li>							<li><span class="button disabled">Disabled</span></li>						</ul>					</section>					<section>						<h4>Form</h4>						<form method="post" action="#">							<div class="row uniform">								<div class="6u 12u$(xsmall)">									<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />								</div>								<div class="6u$ 12u$(xsmall)">									<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />								</div>								<div class="12u$">									<div class="select-wrapper">										<select name="demo-category" id="demo-category">											<option value="">- Category -</option>											<option value="1">Manufacturing</option>											<option value="1">Shipping</option>											<option value="1">Administration</option>											<option value="1">Human Resources</option>										</select>									</div>								</div>								<div class="4u 12u$(small)">									<input type="radio" id="demo-priority-low" name="demo-priority" checked>									<label for="demo-priority-low">Low</label>								</div>								<div class="4u 12u$(small)">									<input type="radio" id="demo-priority-normal" name="demo-priority">									<label for="demo-priority-normal">Normal</label>								</div>								<div class="4u$ 12u$(small)">									<input type="radio" id="demo-priority-high" name="demo-priority">									<label for="demo-priority-high">High</label>								</div>								<div class="6u 12u$(small)">									<input type="checkbox" id="demo-copy" name="demo-copy">									<label for="demo-copy">Email me a copy</label>								</div>								<div class="6u$ 12u$(small)">									<input type="checkbox" id="demo-human" name="demo-human" checked>									<label for="demo-human">Not a robot</label>								</div>								<div class="12u$">									<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>								</div>								<div class="12u$">									<ul class="actions">										<li><input type="submit" value="Send Message" class="special" /></li>										<li><input type="reset" value="Reset" /></li>									</ul>								</div>							</div>						</form>					</section>					<section>						<h4>Image</h4>						<h5>Fit</h5>						<div class="box alt">							<div class="row uniform">								<div class="12u"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>								<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>							</div>						</div>						<h5>Left &amp; Right</h5>						<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>						<p><span class="image right"><img src="images/pic05.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>					</section>				</div>			</section>		-->
+    <!-- Footer -->
+    <footer id="footer">
+      
+      <p class="copyright">© keyplus. Credits: <a href="http://html5up.net">HTML5
+          UP</a></p>
+    </footer>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
