Update Supported hardware link on website (#65)

--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
       <header class="major">
         <h2>Get keyplus today. </h2>
         <p>The keyplus GitHub page has all the information you need to get
-          started.</p>
-		<p>If you have a Keyplus Mini, you can jump right in. Otherwise,
-          check out the <a href="https://github.com/ahtn/keyplus">supported
+          started. If you have a keyplus mini, you can jump right in. Otherwise,
+          check out the <a href="https://github.com/ahtn/keyplus/blob/master/doc/supported_hardware.md">supported
             hardware list</a> to see if you have a compatible device. </p>
       </header>
       <ul class="actions">
